adjusted #return viewport width to see if fixes on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,7 +49,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 98vw;
+  width: 95vw;
   height: 100vh;
   animation: opacity 1s infinite;
 }
@@ -507,7 +507,7 @@ height: 70vh;
   }
 
   #return {
-    width: 100vw;
+    width: 95vw;
     
   }
 
